ontol/ontol-compiler/test-cases/error/fundamentals/domain_not_found.on
use
'pkg' // ERROR domain not found
as foo
